# libre-pdwise

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/lpdwise/: Cargo.toml
crates/lpdwise-archive/: Cargo.toml
crates/lpdwise-archive/src/: git.rs  lib.rs
crates/lpdwise-asr/: Cargo.toml
crates/lpdwise-asr/src/: engine.rs  groq.rs  lib.rs  model.rs  sherpa.rs
crates/lpdwise-audio/: Cargo.toml
crates/lpdwise-audio/src/: acquisition.rs  chunker.rs  lib.rs
crates/lpdwise-audio/tests/: url_security.rs
crates/lpdwise-clipboard/: Cargo.toml
crates/lpdwise-clipboard/src/: arboard.rs  lib.rs  provider.rs  stdin.rs  stdout.rs  termux.rs
crates/lpdwise-core/: Cargo.toml
crates/lpdwise-core/src/: config.rs  language.rs  lib.rs  pipeline.rs  prompt.rs  types.rs
crates/lpdwise-core/tests/: config_priority.rs  prompt_edge_cases.rs  transcript_normalization.rs
crates/lpdwise-device/: Cargo.toml
crates/lpdwise-device/src/: lib.rs  llmfit.rs  probe.rs
crates/lpdwise-process/: Cargo.toml
crates/lpdwise-process/src/: lib.rs  logging.rs  runner.rs
crates/lpdwise/src/: cli.rs  delivery.rs  doctor.rs  error.rs  input.rs  interactive.rs  main.rs  progress.rs
spikes/: llmfit-spike.md  security-audit.md  sherpa-onnx-spike.md  termux-clipboard-spike.md  zigbuild-spike.md
