[workspace]
members = [
    "crates/lpdwise",
    "crates/lpdwise-core",
    "crates/lpdwise-process",
    "crates/lpdwise-audio",
    "crates/lpdwise-asr",
    "crates/lpdwise-clipboard",
    "crates/lpdwise-archive",
    "crates/lpdwise-device",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
indicatif = "0.17"

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Config
toml = "0.8"

# Time
time = { version = "0.3", features = ["formatting", "macros"] }

# Regex
regex = "1"

# Crypto
sha2 = "0.10"

# System info
sysinfo = "0.33"

# Platform / FFI
libc = "0.2"

# Filesystem / temp
tempfile = "3"
dirs = "6"
fs2 = "0.4"

# Clipboard
arboard = "3"

# Git
git2 = { version = "0.19", features = ["vendored-libgit2"] }

# Workspace crates
lpdwise-core = { path = "crates/lpdwise-core" }
lpdwise-process = { path = "crates/lpdwise-process" }
lpdwise-audio = { path = "crates/lpdwise-audio" }
lpdwise-asr = { path = "crates/lpdwise-asr" }
lpdwise-clipboard = { path = "crates/lpdwise-clipboard" }
lpdwise-archive = { path = "crates/lpdwise-archive" }
lpdwise-device = { path = "crates/lpdwise-device" }
