[package]
name = "lpdwise-archive"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
git2.workspace = true
fs2.workspace = true
thiserror.workspace = true
tracing.workspace = true

lpdwise-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
