[package]
name = "lpdwise-asr"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
dirs.workspace = true

lpdwise-core.workspace = true
lpdwise-process.workspace = true

[dev-dependencies]
tempfile.workspace = true
