[package]
name = "lpdwise-audio"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true

lpdwise-core.workspace = true
lpdwise-process.workspace = true
