[package]
name = "lpdwise-clipboard"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["desktop"]
desktop = ["dep:arboard"]
termux = []

[dependencies]
arboard = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

lpdwise-process.workspace = true
