[package]
name = "lpdwise-core"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
