[package]
name = "lpdwise-device"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
sysinfo.workspace = true
dirs.workspace = true
libc.workspace = true

lpdwise-process.workspace = true
